<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backload"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_linear">

        <com.rey.material.widget.TextView
                style="@style/TextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_wait_sms_validation_top" />

        <com.rey.material.widget.TextView
                android:id="@+id/txt_count_down_timer"
                style="@style/TextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_wait_sms_validation_countdown"
                android:layout_marginTop="10dp"/>

        <LinearLayout
                android:id="@+id/linear_dont_recive_sms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_marginTop="10dp">

            <com.rey.material.widget.TextView
                    style="@style/TextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_wait_sms_validation_center" />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                <com.rey.material.widget.Button
                        style="@style/style_btn_wait_sms"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:onClick="Btn_BackFirstSetting"
                        android:text="@string/btn_wait_sms_validation_back_first_setting" />

                <com.rey.material.widget.Button
                        style="@style/style_btn_wait_sms"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:onClick="Btn_SmsRequestAgain"
                        android:text="@string/btn_wait_sms_validation_rerequest" />

                <com.rey.material.widget.Button
                        style="@style/style_btn_wait_sms"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:onClick="Btn_Continue"
                        android:text="@string/btn_wait_sms_validation_continue" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>