<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bg">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title"
                android:gravity="center"
                android:background="@color/color_orange"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_loginpass"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
        <EditText
                android:id="@+id/edit_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:textColor="#ff6a0b67"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="30dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
        />
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:gravity="center"
                android:layout_marginTop="10dp">
            <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/color_orange"
                    android:text="@string/btn_save"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/color_orange"
                    android:text="@string/btn_delete"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"/>
            <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/red_color"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>