<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <ImageView
            android:id="@+id/marker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/marker_content_description"
            app:srcCompat="@drawable/ic_twotone_location_on_48px"
            tools:ignore="MissingConstraints,VectorDrawableCompat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:orientation="vertical"
            android:baselineAlignBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <TextView
                android:id="@+id/instructionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"
                android:textSize="18sp"
                tools:text="@string/instruction_where_description"/>

        <TextView
                android:id="@+id/instructionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/instruction_where_subtitle_description"/>

        <SeekBar
                android:id="@+id/radiusBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:max="55"
               />

        <TextView
                android:id="@+id/radiusDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                tools:text="100 meters"/>

        <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/message_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLines="1"/>

        <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_button"
                android:text="@string/continue_description"
                android:textColor="@color/colorAccent"/>
        <!--android:foreground="?attr/selectableItemBackground"-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>