<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backload">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:gravity="center"
            android:background="@color/color_orange"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_loginpass"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
        <EditText
                android:id="@+id/edit_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:textColor="#ff6a0b67"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="30dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
        />
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:gravity="center"
                android:layout_marginTop="10dp">
            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/color_orange"
                    android:text="@string/btn_login"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>