<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bg">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title_ch_panel"
                android:gravity="center"
                android:background="@color/color_orange"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="پسورد دستگاه را وارد کنید:"
                android:textSize="20dp"
                android:textColor="#ffd04daf"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"/>

        <EditText
                android:id="@+id/editTextpass"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:textColor="#ff6a0b67" />

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:id="@+id/buttonsend"
                    android:background="@color/color_orange"
                    android:text="@string/send_password_panel"
                    android:textColor="@color/white"

            />
            <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:id="@+id/buttonshowpass"
                    android:background="@color/color_orange"
                    android:text="@string/show_pass_user"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>