<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popupdisplay"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:id="@+id/linear_logo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:id="@+id/sendsms"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:layoutDirection="rtl"
                android:padding="10sp">

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/popup_sms"
                    android:textSize="20sp" />
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/white" />

        <LinearLayout
                android:id="@+id/send_socket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="10sp">

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/popup_internet"
                    android:textSize="20sp" />
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/white" />

        <LinearLayout
                android:id="@+id/send_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="10sp">

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/popup_automatic"
                    android:textSize="20sp"
                    android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>